[package]
name = "hyrps"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num_enum = "0.5.7"
rusb = "0.9"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
comfy-table = "5.0"
itertools = "0.10"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
